# DRF

./: materials.json  pyproject.toml  users.json
confing/: asgi.py  settings.py  urls.py  wsgi.py
materials/: admin.py  models.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  fill_database.py
users/migrations/: 0001_initial.py  0002_payment.py
