[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
phonenumbers = "^8.13.47"
django-phonenumber-field = "^8.0.0"
pillow = "^11.0.0"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
